# ShellBridge

./: Cargo.toml  LICENSE  README.md  shellbridge_init.sh
data/: commands.json
src/: lib.rs  main.rs
src/ai/: copilot.rs
src/core/: command_db.rs  executor.rs  mod.rs  os_detector.rs
src/translation/: engine.rs
