[package]
name = "shellbridge"
version = "0.1.0"
edition = "2021"
authors = ["Nikhil Kottoli"]
description = "A CLI tool to translate shell commands between Linux, macOS, and Windows."

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.29", features = ["bundled"] }
colored = "2.0"
dialoguer = "0.11"
sys-info = "0.9"
directories = "5.0"
lazy_static = "1.4"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"

[profile.release]
strip = true
opt-level = "z"
lto = true
